# fictional-octo-robot

./: .gitignore  BENCHMARK_EVERYTHING.md  PLAN.md  PRD.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
src/sbsearch/: chunking.py  cli.py  config.py  embeddings.py  excludes.py  indexer.py  search.py  semantic.py  status.py  watcher.py
src/sbsearch/bench/: corpus.py  fts5_vs_ripgrep.py  watch_latency.py
tests/: test_bench_fts5_vs_ripgrep.py  test_chunking.py  test_cli.py  test_config.py  test_corpus.py  test_embeddings.py  test_excludes.py  test_indexer.py  test_scaffold.py  test_search.py  test_semantic.py  test_status.py  test_watch_latency.py  test_watcher.py
